--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         project_id: ${{ secrets.GCP_PROJECT_ID }}
         service_account_key: ${{ secrets.RS_GCP_SA_KEY }}
 
-    - name: Configure docker
+    - name: Configure Docker
       run: |
         gcloud auth configure-docker
 
