--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -20,26 +20,19 @@ jobs:
           service_account_key: ${{ secrets.RS_GCP_SA_KEY }}
           export_default_credentials: true
 
-      - name: Configure Docker
-        run: gcloud auth configure-docker
-
-      # Optional: Grant Docker permissions if running on self-hosted runners
-      - name: Ensure Docker permissions
-        if: runner.os == 'Linux'
-        run: |
-          sudo usermod -aG docker $USER
-          newgrp docker || true
+      - name: Configure Docker for Artifact Registry
+        run: gcloud auth configure-docker REGION-docker.pkg.dev
 
       - name: Build Docker image
-        run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/rs-gcp-flask:latest .
+        run: docker build -t REGION-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/your-repo/rs-gcp-flask:latest .
 
       - name: Push Docker image
-        run: docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/rs-gcp-flask:latest
+        run: docker push REGION-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/your-repo/rs-gcp-flask:latest
 
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy rs-gcp-flask \
-            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/rs-gcp-flask:latest \
+            --image REGION-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/your-repo/rs-gcp-flask:latest \
             --region us-central1 \
             --platform managed \
             --allow-unauthenticated
